# pfunk

./: .gitignore  CLI.md  CONTRIBUTE.md  Dockerfile  README.md  TUTORIAL.md  docker-compose.yaml  docker-fauna.yml  fauna.ipynb.tmpl  pyproject.toml  tests.py
.github/workflows/: main.yml
docutils/templates/: module.html.jinja2
pfaunk/: collection.py  fields.py  mixins.py  template.py
pfunk/: __init__.py  cli.py  client.py  collection.py  db.py  exceptions.py  fields.py  function.py  functions.py  indexes.py  lightning.py  loading.py  project.py  queryset.py  resources.py  roles.py  template.py  testcase.py
pfunk/api/: events.py  http.py  middleware.py  views.py
pfunk/contrib/: crud.py  generic.py  templates.py
pfunk/contrib/auth/: collections.py  functions.py  key.py  resources.py  views.py
pfunk/contrib/ecommerce/: collections.py  resources.py  views.py
pfunk/contrib/email/: base.py  dummy.py  ses.py
pfunk/ecommerce/: models.py  views.py
pfunk/forms/: collections.py  fields.py  form.py
pfunk/tests/: __init__.py  init_digitalocean.py  properties.py  test_auth.py  test_aws.py  test_collection.py  test_crud.py  test_custom_user_group_group_perms.py  test_custom_user_group_m2m.py  test_custom_user_group_users_perms.py  test_db.py  test_deployment.py  test_dev.py  test_email.py  test_group_subclass.py  test_jwt.py  test_m2m.py  test_project.py  test_resources.py  test_sandbox.py  test_user_subclass.py  test_user_subclass_m2m.py  test_web_change_password.py  test_web_crud.py  test_web_custom_user_group_group_perms.py  test_web_custom_user_group_m2m.py  test_web_custom_user_group_users_perms.py  test_web_digitalocean.py  test_web_forgot_password.py  test_web_json_change_password.py  test_web_json_crud.py  test_web_json_forgot_password.py  test_web_json_login.py  test_web_json_signup.py  test_web_json_stripe.py  test_web_login.py  test_web_signup.py  test_web_stripe.py  unittest_keys.py  usage.py
pfunk/utils/: aws.py  deploy.py  json_utils.py  publishing.py  routing.py  swagger.py  templates.py
pfunk/web/: events.py  middleware.py  request.py  response.py
pfunk/web/forms/: collections.py
pfunk/web/oauth2/: indexes.py  models.py  publish.py  server.py  token.py  util.py  views.py
(+15 files in other folders)
