[tool.poetry]
name = "pfunk"
version = "0.5.10"
description = "A Python library created make building FaunaDB GraphQL schemas and authentication code easier."
authors = ["Brian Jinwright"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
faunadb = "^4.0.1"
valley = "1.5.8"
requests = "^2.23.0"
pytz = "^2021.1"
decorator = "^5.0.9"
pip = "^23.0.1"
cryptography = "^3.4.7"
cachetools = "^4.2.2"
click = "^8.0.1"
boto3 = "^1.18.36"
graphql-py = "^0.8.1"
sammy = "^0.4.3"
stripe = "^2.61.0"
bleach = "^4.1.0"
openapi-spec-validator = "^0.4.0"
swaggyp = "^0.3.0"
formy = "1.3.1"
Jinja2 = "^3.1.2"
Werkzeug = "2.1.2"
PyJWT = "^2.6.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
coverage = "^5.5"
pdoc = "^7.2.0"

[build-system]
requires = ["setuptools", "poetry>=0.12"]

[tool.poetry.scripts]
pfunk = 'pfunk.cli:pfunk'
